SERVER-17752: Winsock API was called before a successful WSAStartup()